# CyberNH

./: .env.example  .gitignore  01_run_sim.sh  B1_compare_gsm8k.sh  B2_benchmark_gsm8k_4b.sh  L1_listen_queues.sh  L2_listen_llm.sh  LLM_CONTROL_METHOD_DESIGN.md  QWEN_SAFETY_EXPLORATION_ARTICLE.md  README  README.md  S1_Start_llm.sh  S2_Start_2B_IN.sh  S2_commit.sh  S3_Start_4B_IN.sh  S3_start_4B.sh  T1_start_llm.sh  UNSAFE_FEATURE_RANKING_DESIGN.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run_scigraph_llm.sh  server.js
agent-hunt-simulator/: README.md  app.js  index.html  styles.css
config/: deepseek.env.example  local_deepseek_v4_flash.env.example  qwen3_8b_server.env.example  qwen3_vl_2b_server.env.example
examples/: sample_article.md
html-ppt-multi-agent-social-science/: index.html  style.css
html-ppt-multi-agent-social-science/assets/: runtime.js
idea_agent/: __init__.py  cli.py  clusterer.py  config.py  evidence.py  extractor.py  graph_builder.py  io_utils.py  normalizer.py  parser.py  schemas.py  section_roles.py  vectorizer.py
idea_agent/clients/: deepseek.py
idea_agent/pipeline/: compiler.py
public/: app.js  index.html  styles.css
rules/: README.md
rules/datasets/: eval_cases.jsonl  train_seed.jsonl
rules/extracted/: pdfinfo.txt  rules_text.md  rules_text.txt
rules/reports/: coverage.md
rules/structured/: metrics.jsonl  rule_schema.json  rules.jsonl
runtime/agents/: __init__.py  agent_factory.py  (+6 more)
scripts/: bootstrap_env.sh
src/: config.js  llmClient.js  map.js  rng.js  simulation.js
tests/: test_smoke.py
(+31 files in other folders)
